<resources>
    <string name="app_name">Confess-Ba</string>
    <string name="search">Search</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="add">add</string>
    <string name="write_a_new_post">Write a new post</string>
    <string name="post_image">post_image</string>
    <string name="reply_to">Reply to</string>
    <string name="post_menu">post_menu</string>
    <string name="reply">Reply</string>
    <string name="settings">Settings</string>
    <string name="report">Report</string>
    <string name="submit_post">Submit post</string>
    <string name="title">Title</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="delete_image_button">Delete image button</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="view_reply_to_post">View reply-to post</string>
    <string name="view_replying_post">View replying post</string>
    <string name="confess_ba">ConfessBa</string>
    <string name="um_confession">UMConfession</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="reported">Reported</string>
    <string name="admin">Admin</string>
    <string name="add_admin">add admin member</string>
    <string name="delete_post">Delete post</string>
    <string name="remove_from_reported">Remove from reported</string>
    <string name="reported_post_icon">reported post icon</string>
    <string name="admin_icon">admin icon</string>
    <string name="dev">xianglun</string>
    <string name="delete_admin_button">delete admin button</string>
    <string name="post_id">Post Id (Ex. CFS000000)</string>
    <string name="logo">logo</string>
</resources>