<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FBFDFF"
        tools:context=".LoginActivity">

    <EditText
            android:id="@+id/login_email_edit_text"
            android:layout_width="285dp"
            android:layout_height="71dp"
            android:layout_marginStart="63dp"
            android:layout_marginTop="239dp"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="421dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="#ba6b6c"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorLink="#FFCCCB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

    <EditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="285dp"
            android:layout_height="71dp"
            android:layout_marginStart="63dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="330dp"
            android:autofillHints="password"
            android:backgroundTint="#ba6b6c"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="519dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="164dp"
            android:background="#ffcccb"
            android:text="@string/login"
            android:textSize="18sp"
            app:backgroundTint="#FFCCCB"
            app:iconTint="#ffcccb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
            android:id="@+id/login_progress_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            app:cardCornerRadius="100dp"
            android:elevation="10dp"
            android:visibility="invisible">

        <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/create_post_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:indicatorColor="@color/mid_red"
                app:indicatorSize="?attr/indicatorSize"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:indeterminateBehavior="cycle"
                android:indeterminate="true"
                android:visibility="visible" />

    </androidx.cardview.widget.CardView>

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="205dp"
            android:layout_height="176dp"
            android:layout_marginStart="103dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="103dp"
            android:layout_marginBottom="510dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>