<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/adapter_post_date"
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="15dp"
                android:text="Wed, 16-Feb-2022"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText"
                android:layout_marginTop="0dp" />

        <TextView
                android:id="@+id/adapter_post_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/adapter_post_date"
                android:layout_alignTop="@id/adapter_post_date"
                android:layout_alignBottom="@+id/adapter_post_date"
                android:paddingVertical="16dp"
                android:text="06:37 PM"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="italic"
                tools:ignore="HardcodedText"
                android:layout_marginTop="0dp" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/adapter_post_date"
                android:background="@android:color/darker_gray" />

        <ImageButton
                android:id="@+id/adapter_post_menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_drop_down_icon_24"
                android:background="@android:color/transparent"
                android:padding="15dp"
                android:layout_alignBottom="@+id/adapter_post_date"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/post_menu"
                app:tint="@color/grey" />

        <pereira.agnaldo.previewimgcol.ImageCollectionView
                android:id="@+id/adapter_post_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/adapter_post_date"
                app:imageMargin="1dp"
                app:pinchToZoom="true"
                app:showExternalBorderMargins="true"
                app:maxImagePerRow="3"
                app:maxRows="2"
                android:scaleType="centerCrop"
                android:visibility="invisible"
                android:contentDescription="@string/post_image" />

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/adapter_linear_layout_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/adapter_post_image"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/adapter_post_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="10dp"
                    android:paddingHorizontal="15dp"
                    android:text="#CF000001"
                    android:textSize="16sp"
                    android:textColor="@color/dark_blue"
                    android:textStyle=""
                    tools:ignore="HardcodedText" />

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/adapter_reply_to_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="3dp"
                        android:text="@string/reply_to"
                        android:textSize="14sp"
                        android:textColor="@color/grey"
                        tools:ignore="HardcodedText" />


                <TextView
                        android:id="@+id/adapter_reply_post_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingHorizontal="0dp"
                        android:text="#CF000000"
                        android:textSize="14sp"
                        android:textColor="@color/dark_blue"
                        tools:ignore="HardcodedText" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                    android:id="@+id/adapter_post_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:paddingTop="0dp"
                    android:paddingBottom="15dp"
                    android:paddingHorizontal="15dp"
                    android:lineSpacingExtra="5dp"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                    android:textColor="@color/grey"
                    tools:ignore="HardcodedText" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</androidx.cardview.widget.CardView>